--- a/template/style.css
+++ b/template/style.css
@@ -20,6 +20,13 @@ right: 35%;
 padding: 15px;
 }
 
+.form-info{
+	position: absolute;
+	width: 100%;
+right: 90%;
+padding: 15px;
+}
+
   }
 
 @media only screen and (max-width: 768px) {
