--- a/template/style.css
+++ b/template/style.css
@@ -5,7 +5,9 @@ body{
 .tit{
 	padding: 9px
 }
-
+h1,h2,h3,h4,h5,h6,p,a{
+	font-family: 'Amiri', serif;
+}
 
 @media only screen and (min-width: 768px) {
   
